# lali

./: CMakeLists.txt  README.md
src/: AniList.cpp  AniList.h  Anime.cpp  Anime.h  AnimeList.cpp  AnimeList.h  AnimeQML.cpp  AnimeQML.h  App.cpp  App.h  CMakeLists.txt  List.h  ListQML.cpp  ListQML.h  ListRepository.cpp  ListRepository.h  LocalListRepository.cpp  LocalListRepository.h  Status.h  main.cpp  qml.qrc
src/qml/: main.qml
src/qml/components/: AniButton.qml  AniTextField.qml  AnimeCard.qml  AnimeInfo.qml  AnimeList.qml  Button.qml  HorizontalSpacer.qml  Modal.qml  SideBarButton.qml  TextField.qml
src/qml/views/: ListForm.qml  ListsView.qml  SearchView.qml
